--- a/NAMESPACE
+++ b/NAMESPACE
@@ -767,4 +767,4 @@ importFrom(utils,write.table)
 importFrom(uwot,umap)
 importFrom(uwot,umap_transform)
 importMethodsFrom(Matrix,t)
-useDynLib(Seurat)
+useDynLib(SeuratSales)
